2005-11-13    <jeff@mini.nerble.net>

	* shapes/shapevga.cc,etc: Moving defs. around so ExultStudio can
	pass the correct game info. when loading shape data.

2005-10-26  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* useval.cc, ucsched.cc: fixing the Blacksword's 'Fire' power
	  in FoV.

2005-10-25    <jeff@mini.nerble.net>

	* actors.cc: Ready/unready weapon depending on schecule.

2005-10-14    <jeff@mini.nerble.net>

	* readnpcs.cc: New schedules.dat supports z-coord. in pos.

2005-10-09    <jeff@mini.nerble.net>

	* objs/barge.cc (Barge_object): Fixed cart-and-horse animation.

2005-10-04    <jeff@mini.nerble.net>

	* actorio.cc: Save mana/magic for all NPC's.

2005-10-02    <jeff@mini.nerble.net>

	* actorio.cc: Save/restore 2-byte face#.

2005-10-01    <jeff@mini.nerble.net>

	* exult.cc: Watch for game names "blackgate" and "serpentisle".

	* objs/egg.cc (Egg_object): Fixed crash when dropping an egg on
	something else.

2005-08-21    <jeff@mini.nerble.net>

	* gumps/Stats_gump.cc (Stats_gump): Display 'extra' attributes
	defined in usecode.

	* mapedit/shapelst.cc: Fixed bug when importing from Gimp where
	transparency would go away.

2005-08-10    <jeff@mini.nerble.net>

	* actors.h (public): get_attributes() returns list of all
	attribute/value pairs.

	* usecode/intrinsics.cc: get_npc_prop/set_npc_prop can get/set
	generic attributes if you pass a name as the property.

2005-08-06  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Changed the way BG paperdolling is handled to use a 'paperdol.vga' file.
	  Paperdoll patches are now possible in BG too.

2005-08-02    <jeff@mini.nerble.net>

	* shapes/bodies.cc: Use text files for getting body shapes.

2005-07-24    <jeff@mini.nerble.net>

	* usecode/ucinternal.cc: In SI, 'path_run_usecode' should have the
	companions follow (fixes ice-raft).

	* actions.cc (std): At end of path-walking, gather up followers.

	* actors.cc,drag.cc:  Call readied/unreadied usecode in more