@@ -1,3 +1,7 @@
+2005-10-26  Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* useval.cc: Fixing a bug I introduced when I fixed the Blacksword's
+	  'Fire' power.
+
 2005-11-13    <jeff@mini.nerble.net>
 
 	* shapes/shapevga.cc,etc: Moving defs. around so ExultStudio can
